--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.2",
         "benjamincrozat/laravel-dropbox-driver": "^2.0",
+        "cartalyst/stripe-laravel": "^11.0",
         "fideloper/proxy": "^4.0",
         "google/apiclient": "^2.4",
         "laravel/framework": "^6.2",
